@@ -24,7 +24,7 @@
     <RunParams>
       <local>
         <FormatVersion Value="1"/>
-        <CommandLineParams Value="-t 1"/>
+        <CommandLineParams Value="-t 11"/>
       </local>
       <environment>
         <UserOverrides Count="1">
