@@ -7,26 +7,26 @@
       <Unit0>
         <Filename Value="testsuite.lpr"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
         <TopLine Value="75"/>
         <CursorPos X="16" Y="85"/>
-        <UsageCount Value="121"/>
+        <UsageCount Value="122"/>
         <Loaded Value="True"/>
       </Unit0>
       <Unit1>
         <Filename Value="TestManager.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="492"/>
-        <CursorPos X="3" Y="495"/>
-        <UsageCount Value="121"/>
+        <EditorIndex Value="5"/>
+        <TopLine Value="364"/>
+        <CursorPos Y="383"/>
+        <UsageCount Value="122"/>
+        <Loaded Value="True"/>
       </Unit1>
       <Unit2>
         <Filename Value="Test1.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
         <CursorPos Y="4"/>
-        <UsageCount Value="121"/>
+        <UsageCount Value="122"/>
       </Unit2>
       <Unit3>
         <Filename Value="test2.pas"/>
@@ -34,7 +34,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="25"/>
         <CursorPos X="26" Y="51"/>
-        <UsageCount Value="121"/>
+        <UsageCount Value="122"/>
       </Unit3>
       <Unit4>
         <Filename Value="Test3.pas"/>
@@ -42,7 +42,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="78"/>
         <CursorPos X="71" Y="109"/>
-        <UsageCount Value="121"/>
+        <UsageCount Value="122"/>
       </Unit4>
       <Unit5>
         <Filename Value="Test4.pas"/>
@@ -50,14 +50,14 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="104"/>
         <CursorPos Y="119"/>
-        <UsageCount Value="121"/>
+        <UsageCount Value="122"/>
       </Unit5>
       <Unit6>
         <Filename Value="Test5.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="111"/>
-        <UsageCount Value="121"/>
+        <UsageCount Value="122"/>
       </Unit6>
       <Unit7>
         <Filename Value="Test6.pas"/>
@@ -65,13 +65,13 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="134"/>
         <CursorPos X="11" Y="161"/>
-        <UsageCount Value="121"/>
+        <UsageCount Value="122"/>
       </Unit7>
       <Unit8>
         <Filename Value="Test7.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
-        <UsageCount Value="121"/>
+        <UsageCount Value="122"/>
       </Unit8>
       <Unit9>
         <Filename Value="Test8.pas"/>
@@ -79,7 +79,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="70"/>
         <CursorPos X="96" Y="67"/>
-        <UsageCount Value="121"/>
+        <UsageCount Value="122"/>
       </Unit9>
       <Unit10>
         <Filename Value="Test9.pas"/>
@@ -87,7 +87,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="41"/>
         <CursorPos X="109" Y="44"/>
-        <UsageCount Value="121"/>
+        <UsageCount Value="122"/>
       </Unit10>
       <Unit11>
         <Filename Value="Test10.pas"/>
@@ -95,15 +95,16 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="86"/>
         <CursorPos X="34" Y="111"/>
-        <UsageCount Value="121"/>
+        <UsageCount Value="122"/>
       </Unit11>
       <Unit12>
         <Filename Value="Test11.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="70"/>
-        <CursorPos Y="70"/>
-        <UsageCount Value="121"/>
+        <EditorIndex Value="1"/>
+        <TopLine Value="172"/>
+        <CursorPos Y="199"/>
+        <UsageCount Value="122"/>
+        <Loaded Value="True"/>
       </Unit12>
       <Unit13>
         <Filename Value="Test12.pas"/>
@@ -111,7 +112,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="102"/>
         <CursorPos X="54" Y="131"/>
-        <UsageCount Value="121"/>
+        <UsageCount Value="122"/>
       </Unit13>
       <Unit14>
         <Filename Value="Test13.pas"/>
@@ -126,7 +127,7 @@
           <TopLine Value="63"/>
           <CursorPos X="40" Y="102"/>
         </ExtraEditor1>
-        <UsageCount Value="121"/>
+        <UsageCount Value="122"/>
       </Unit14>
       <Unit15>
         <Filename Value="Test14.pas"/>
@@ -140,7 +141,7 @@
           <EditorIndex Value="-1"/>
           <CursorPos Y="4"/>
         </ExtraEditor1>
-        <UsageCount Value="121"/>
+        <UsageCount Value="122"/>
       </Unit15>
       <Unit16>
         <Filename Value="Test15.pas"/>
@@ -153,7 +154,7 @@
           <WindowIndex Value="1"/>
           <TopLine Value="91"/>
         </ExtraEditor1>
-        <UsageCount Value="121"/>
+        <UsageCount Value="122"/>
       </Unit16>
       <Unit17>
         <Filename Value="Test16.pas"/>
@@ -169,12 +170,12 @@
           <TopLine Value="110"/>
           <CursorPos Y="131"/>
         </ExtraEditor1>
-        <UsageCount Value="121"/>
+        <UsageCount Value="122"/>
       </Unit17>
       <Unit18>
         <Filename Value="Makefile.fpc"/>
         <IsPartOfProject Value="True"/>
-        <UsageCount Value="121"/>
+        <UsageCount Value="122"/>
       </Unit18>
       <Unit19>
         <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
@@ -192,10 +193,11 @@
       </Unit20>
       <Unit21>
         <Filename Value="../client/FBOutputBlock.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="786"/>
-        <CursorPos X="38" Y="796"/>
+        <EditorIndex Value="4"/>
+        <TopLine Value="325"/>
+        <CursorPos X="7" Y="357"/>
         <UsageCount Value="20"/>
+        <Loaded Value="True"/>
       </Unit21>
       <Unit22>
         <Filename Value="../client/FBAttachment.pas"/>
@@ -241,10 +243,11 @@
       </Unit27>
       <Unit28>
         <Filename Value="../IB.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="846"/>
-        <CursorPos X="43" Y="914"/>
+        <EditorIndex Value="3"/>
+        <TopLine Value="1000"/>
+        <CursorPos X="14" Y="1031"/>
         <UsageCount Value="51"/>
+        <Loaded Value="True"/>
       </Unit28>
       <Unit29>
         <Filename Value="runtest.sh"/>
@@ -417,10 +420,12 @@
       </Unit52>
       <Unit53>
         <Filename Value="../changelog"/>
-        <EditorIndex Value="-1"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="2"/>
         <TopLine Value="7"/>
-        <CursorPos X="49" Y="33"/>
+        <CursorPos X="48" Y="42"/>
         <UsageCount Value="24"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="None"/>
       </Unit53>
       <Unit54>
@@ -697,7 +702,128 @@
         <UsageCount Value="11"/>
       </Unit92>
     </Units>
-    <JumpHistory HistoryIndex="-1"/>
+    <JumpHistory Count="30" HistoryIndex="29">
+      <Position1>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="767" Column="14" TopLine="735"/>
+      </Position1>
+      <Position2>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="771" Column="14" TopLine="739"/>
+      </Position2>
+      <Position3>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="775" Column="16" TopLine="743"/>
+      </Position3>
+      <Position4>
+        <Filename Value="TestManager.pas"/>
+        <Caret Line="383" TopLine="353"/>
+      </Position4>
+      <Position5>
+        <Filename Value="Test11.pas"/>
+        <Caret Line="199" TopLine="172"/>
+      </Position5>
+      <Position6>
+        <Filename Value="TestManager.pas"/>
+        <Caret Line="383" TopLine="316"/>
+      </Position6>
+      <Position7>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="733" TopLine="721"/>
+      </Position7>
+      <Position8>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="734" TopLine="721"/>
+      </Position8>
+      <Position9>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="735" TopLine="721"/>
+      </Position9>
+      <Position10>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="734" TopLine="721"/>
+      </Position10>
+      <Position11>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="740" TopLine="721"/>
+      </Position11>
+      <Position12>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="325" TopLine="306"/>
+      </Position12>
+      <Position13>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="417" TopLine="398"/>
+      </Position13>
+      <Position14>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="422" TopLine="398"/>
+      </Position14>
+      <Position15>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="418" TopLine="398"/>
+      </Position15>
+      <Position16>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="419" TopLine="398"/>
+      </Position16>
+      <Position17>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="420" TopLine="398"/>
+      </Position17>
+      <Position18>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="421" TopLine="398"/>
+      </Position18>
+      <Position19>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="422" TopLine="398"/>
+      </Position19>
+      <Position20>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="326" TopLine="307"/>
+      </Position20>
+      <Position21>
+        <Filename Value="TestManager.pas"/>
+        <Caret Line="383" TopLine="364"/>
+      </Position21>
+      <Position22>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="733" TopLine="714"/>
+      </Position22>
+      <Position23>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="144" Column="14" TopLine="124"/>
+      </Position23>
+      <Position24>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="141" Column="23" TopLine="124"/>
+      </Position24>
+      <Position25>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="144" Column="21" TopLine="124"/>
+      </Position25>
+      <Position26>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="147" Column="21" TopLine="124"/>
+      </Position26>
+      <Position27>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="186" Column="44" TopLine="154"/>
+      </Position27>
+      <Position28>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="201" Column="50" TopLine="169"/>
+      </Position28>
+      <Position29>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="247" Column="51" TopLine="216"/>
+      </Position29>
+      <Position30>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="284" Column="39" TopLine="252"/>
+      </Position30>
+    </JumpHistory>
   </ProjectSession>
   <Debugging>
     <BreakPoints Count="1">
